# research-memory-gateway

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.ghcr.yml  docker-compose.nas.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml  tests.yml
docs/: agent-taskbook.md  client-config.md  deployment.md  operations.md  schema.md  webui-agent-taskbook.md  webui-visual-smoke.md
docs/adr/: 001-nocturne-backend-boundary.md
examples/: sample-memory.json
prompts/: research-memory-system-prompt.md
scripts/: smoke.ps1  sync-client-assets.ps1
skills/research-memory-gateway/: SKILL.md
src/research_memory_gateway/: __init__.py  admin.py  backends.py  config.py  exporters.py  models.py  nocturne.py  policy.py  retrieval.py  server.py  service.py  source_refs.py  taxonomy.py
src/research_memory_gateway/webui/: __init__.py  app.py  auth_routes.py  runtime.py  security.py
src/research_memory_gateway/webui/frontend/: eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/research_memory_gateway/webui/frontend/src/: App.css  App.tsx  index.css  router.tsx
src/research_memory_gateway/webui/frontend/src/constants/: memoryTypes.ts
src/research_memory_gateway/webui/frontend/src/hooks/: useTheme.ts
src/research_memory_gateway/webui/frontend/src/i18n/: en.json  index.ts  zh-CN.json
src/research_memory_gateway/webui/static/css/: app.css
src/research_memory_gateway/webui/static/js/: admin.js  alpine.min.js  htmx.min.js
tests/: test_models.py  test_webui.py
(+23 files in other folders)
